# advent-of-code

./: async_template.py  template.py
2020/: cli.py  common.py  pyproject.toml  worker.py  workflows.py
2020/solutions/: day01.py
2021/1/: solution.go
2021/10/: solution.go
2021/11/: part1.go  part2.go
2021/13/: solution.go
2021/2/: part1.go  part2.go
2021/3/: part1.go  part2.go
2021/4/: part1.go  part2.go
2021/5/: solution.go
2021/6/: part1.go  part2.go
2021/7/: part1.go  part2.go
2021/8/: part1.go  part2.go
2021/9/: part1.go  part2.go
2022/1/: day1_1.py  day1_2.py  day1_2_alt.py
2022/10/: day10_1.py  day10_2.py
2022/11/: day11.py  day11_1.py  day11_2.py
2022/12/: day12_1.py  day12_1_failed.py  day12_2.py
2022/13/: day13.py
2022/14/: day14_1.py  day14_2.py
2022/15/: day15_1.py  day15_2.py  day15_2_multi_pass.py  day15_2_sets.py  day15_2_single_thread.py  day15_test_range_merge.py
2022/16/: day16_1.py
2022/17/: day17_1.py  day17_2.py  day17_2_lists.py  day17_solution.py
2022/2/: day2_1.py  day2_2.py
2022/3/: day3_1.py  day3_2.py
2022/4/: day4_1.py  day4_2.py  day4_2021.py
2022/5/: day5.py  day5_1.py  day5_2.py
2022/6/: day6.py
2022/7/: day7_1.py  day7_2.py
2022/8/: day8_1.py  day8_2.py
2022/9/: day9.py
2023/: p01.py  p01s.py  p02.py  pyproject.toml
2024/1/: day1.kt
2024/10/: day10.kt
2024/11/: day11.kt
2024/12/: day12.kt
2024/13/: day13.kt
2024/2/: day2.kt
2024/3/: day3.kt
2024/4/: day4.kt
2024/5/: day5.kt
2024/6/: day6.kt
2024/7/: day7.kt
2024/8/: day8.kt
2025/: _template.go
(+15 files in other folders)
